# crynet

./: .gitignore  CMakeLists.txt  README.md
.github/: AGENTS.md
.github/rules/: code-style-cpp.md  code-style-typescript.md
crynet-client/cocos/: package.json
crynet-server/: CMakeLists.txt  CMakePresets.json
crynet-server/cmake/: CompilerOptions.cmake  core.cmake  crynet.cmake  engine.cmake  services.cmake  startup.cmake  tests.cmake
crynet-server/core/: CMakeLists.txt
crynet-server/core/actor/includes/: actor_system.h  handle_registry.h  message.h  message_queue.h  service_context.h  session_manager.h
crynet-server/core/actor/sources/: actor_system.cpp  handle_registry.cpp  message.cpp  message_queue.cpp  service_context.cpp  session_manager.cpp
crynet-server/core/base/includes/: build_config.h
crynet-server/core/base/sources/: build_config.cpp  logger.cpp
crynet-server/core/bootstrap/includes/: bootstrap_config.h  bootstrapper.h
crynet-server/core/bootstrap/sources/: bootstrap_config.cpp  bootstrapper.cpp
crynet-server/core/logger/includes/: logger.h
crynet-server/core/metrics/includes/: metrics_system.h
crynet-server/core/metrics/sources/: metrics_system.cpp
crynet-server/core/monitor/includes/: monitor_runner.h
crynet-server/core/monitor/sources/: monitor_runner.cpp
crynet-server/core/scheduler/includes/: ready_queue.h  worker_loop.h  worker_monitor.h  worker_plugin.h  worker_runner.h  worker_scheduler.h
crynet-server/core/scheduler/sources/: ready_queue.cpp  worker_loop.cpp  worker_monitor.cpp  worker_runner.cpp  worker_scheduler.cpp
crynet-server/core/scheduler/timer/includes/: timer_queue.h
crynet-server/core/scheduler/timer/sources/: timer_queue.cpp
crynet-server/docs/: skynet-cpp-v8-migration-plan.md
crynet-server/engine/: CMakeLists.txt
crynet-server/engine/base/includes/: ScriptEngine.h
crynet-server/engine/v8/engine/includes/: v8_engine.h
crynet-server/engine/v8/engine/sources/: v8_engine.cpp
crynet-server/services/: CMakeLists.txt
crynet-server/startup/: CMakeLists.txt
crynet-server/startup/app/includes/: startup_app.h
crynet-server/startup/app/sources/: main.cpp  startup_app.cpp
crynet-server/tests/: CMakeLists.txt  CMakePresets.json
crynet-server/tests/benchmark/includes/: actor_echo_benchmark.h  startup_smoke_benchmark.h
crynet-server/tests/benchmark/sources/: actor_echo_benchmark.cpp  startup_smoke_benchmark.cpp
crynet-server/tests/unit/includes/: smoke_suite.h
crynet-server/tests/unit/sources/: smoke_suite.cpp
examples/: ping_pong.cpp
include/crynet/: Actor.hpp  Mailbox.hpp  Message.hpp  Scheduler.hpp
src/: Actor.cpp  Mailbox.cpp  Scheduler.cpp
